spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,9 @@ h3 {font-size: 16px !important;}
 .photo-gallery h2::before, .upcoming-events h2::before, .newsleter h2::before {
 	margin-left: -45px;
 }
+.july-text {
+	padding: 20px;
+}
 #collapsibleNavbar::after {max-width: 70%;}
 }
 @media screen and (max-width:768px) {
